// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletsList should render 1`] = `
<DocumentFragment>
  <div
    data-testid="WalletsList"
  >
    <div
      data-testid="WalletTable"
    >
      <div
        class="sc-AxheI gYpVUW -mt-3"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
              role="row"
            >
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Wallet Address
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxirZ jMwzyA"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Wallet Type
                  </div>
                </div>
              </th>
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top justify-end"
                >
                  <div>
                    Balance
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxirZ jMwzyA"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top justify-end"
                >
                  <div>
                    Fiat Value
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxirZ jMwzyA"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="sc-AxmLO kbgHZc group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="sc-Axmtr fdshBv space-x-4"
                >
                  <div
                    class="-space-x-2"
                  >
                    <div
                      aria-label="ARK Devnet"
                      class="sc-AxhUy iDenJW border-theme-primary-100 text-theme-primary-400"
                      data-testid="NetworkIcon-ARK-ark.devnet"
                    >
                      <div
                        class="sc-AxirZ eEbZjj"
                        data-testid="NetworkIcon__icon"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="inline-flex items-center"
                  >
                    <span
                      class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                      data-testid="address__wallet-name"
                    >
                      ARK Wallet 1
                    </span>
                    <span
                      class="sc-fzoLsD fqEnxe text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      D8rr7B1d6 … VBMs6YUYD
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr nugzt justify-center text-sm font-bold text-center align-middle"
                >
                  <div
                    class="inline-flex items-center space-x-2"
                  />
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr nugzt font-semibold justify-end"
                >
                  <span
                    data-testid="Amount"
                  >
                    33.75089801 DARK
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr eIpCAz justify-end text-theme-neutral-light"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="sc-AxmLO kbgHZc group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="sc-Axmtr fdshBv space-x-4"
                >
                  <div
                    class="-space-x-2"
                  >
                    <div
                      aria-label="ARK Devnet"
                      class="sc-AxhUy iDenJW border-theme-primary-100 text-theme-primary-400"
                      data-testid="NetworkIcon-ARK-ark.devnet"
                    >
                      <div
                        class="sc-AxirZ eEbZjj"
                        data-testid="NetworkIcon__icon"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                          title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="inline-flex items-center"
                  >
                    <span
                      class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                      data-testid="address__wallet-name"
                    >
                      ARK Wallet 2
                    </span>
                    <span
                      class="sc-fzoLsD fqEnxe text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      D5sRKWckH … yC3cvJtwb
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr nugzt justify-center text-sm font-bold text-center align-middle"
                >
                  <div
                    class="inline-flex items-center space-x-2"
                  />
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr nugzt font-semibold justify-end"
                >
                  <span
                    data-testid="Amount"
                  >
                    57.68 DARK
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr eIpCAz justify-end text-theme-neutral-light"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletsList should render empty block 1`] = `
<DocumentFragment>
  <div
    data-testid="WalletsList"
  >
    <div
      class="border border-solid border-theme-neutral-300 dark:border-theme-neutral-800 p-6 rounded-lg text-theme-secondary-text undefined"
      data-testid="EmptyBlock"
    >
      <div>
        You have no available wallets at the time
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletsList should render hidden 1`] = `<DocumentFragment />`;

exports[`WalletsList should render with view more button 1`] = `
<DocumentFragment>
  <div
    data-testid="WalletsList"
  >
    <div
      data-testid="WalletTable"
    >
      <div
        class="sc-AxheI gYpVUW -mt-3"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
              role="row"
            >
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Wallet Address
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxirZ jMwzyA"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Wallet Type
                  </div>
                </div>
              </th>
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top justify-end"
                >
                  <div>
                    Balance
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxirZ jMwzyA"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top justify-end"
                >
                  <div>
                    Fiat Value
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxirZ jMwzyA"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="sc-AxmLO kbgHZc group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="sc-Axmtr fdshBv space-x-4"
                >
                  <div
                    class="-space-x-2"
                  >
                    <div
                      aria-label="ARK Devnet"
                      class="sc-AxhUy iDenJW border-theme-primary-100 text-theme-primary-400"
                      data-testid="NetworkIcon-ARK-ark.devnet"
                    >
                      <div
                        class="sc-AxirZ eEbZjj"
                        data-testid="NetworkIcon__icon"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="inline-flex items-center"
                  >
                    <span
                      class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                      data-testid="address__wallet-name"
                    >
                      ARK Wallet 1
                    </span>
                    <span
                      class="sc-fzoLsD fqEnxe text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      D8rr7B1d6 … VBMs6YUYD
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr nugzt justify-center text-sm font-bold text-center align-middle"
                >
                  <div
                    class="inline-flex items-center space-x-2"
                  />
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr nugzt font-semibold justify-end"
                >
                  <span
                    data-testid="Amount"
                  >
                    33.75089801 DARK
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr eIpCAz justify-end text-theme-neutral-light"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="sc-AxmLO kbgHZc group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="sc-Axmtr fdshBv space-x-4"
                >
                  <div
                    class="-space-x-2"
                  >
                    <div
                      aria-label="ARK Devnet"
                      class="sc-AxhUy iDenJW border-theme-primary-100 text-theme-primary-400"
                      data-testid="NetworkIcon-ARK-ark.devnet"
                    >
                      <div
                        class="sc-AxirZ eEbZjj"
                        data-testid="NetworkIcon__icon"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                          title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="inline-flex items-center"
                  >
                    <span
                      class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                      data-testid="address__wallet-name"
                    >
                      ARK Wallet 2
                    </span>
                    <span
                      class="sc-fzoLsD fqEnxe text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      D5sRKWckH … yC3cvJtwb
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr nugzt justify-center text-sm font-bold text-center align-middle"
                >
                  <div
                    class="inline-flex items-center space-x-2"
                  />
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr nugzt font-semibold justify-end"
                >
                  <span
                    data-testid="Amount"
                  >
                    57.68 DARK
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr eIpCAz justify-end text-theme-neutral-light"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <button
        class="sc-AxhCb gbDhHt mt-10 mb-5 w-full"
        data-testid="WalletsList__ViewMore"
        type="button"
      >
        View More
      </button>
    </div>
  </div>
</DocumentFragment>
`;
